Extract subclasses for all types of defined constants